Intergrated editor tool options into editor panel code clean up moved some icon references from self host to UIL. updated localization.

--- a/Water_Features/l10n/ko-KR.csv
+++ b/Water_Features/l10n/ko-KR.csv
@@ -92,22 +92,22 @@
 "Tooltip.LABEL[YY.WT.PlaceInsideBorder]","이 수원은 플레이 가능한 맵 내부에 배치되어야 합니다.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.MustTouchBorder]","바다 해수 공급원은 지도 경계에 닿아야 합니다.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.LockElevation]","수면 높이를 지정하려면 우클릭 하십시오.","","","","","","","","","","","",""
-"Options.GROUP:Experimental","Experimental","","","","","","","","","","","",""
-"Options.GROUP:Stable","Stable","","","","","","","","","","","",""
-"Options.OPTION:Fluidness","Fluidness","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION:Fluidness","Alter the Fluidness factor of the water system. It should change the flow characteristics.","","","","","","","","","","","",""
-"Editor.TOOL[Yenyang's Water Tool]","Yenyang's Water Tool","","","","","","","","","","","",""
-"Options.OPTION:WaterToolSettingsAffectEditorSimulation","Water Tool Settings Affect Editor Simulation","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Allows the settings in the Water Tool tab to affect the editor simulation such as evaporation, fluidness, and Water Clean Up Cycle.","","","","","","","","","","","",""
-"Options.OPTION:SeasonalStreamsAffectEditorSimulation","Seasonal Streams Settings Affect Editor Simulation","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","Allows the settings in the Seasonal Streams tab to affect the editor simulation and alter stream flowrates.","","","","","","","","","","","",""
-"Options.OPTION:WavesAndTidesAffectEditorSimulation","Waves and Tides Settings Affect Editor Simulation","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","Allows the settings in the Waves and Tides tab to affect the editor simulation by oscillating sea level and altering damping value.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","Water Tool will change target elevations of existing water sources by hovering over existing water source, left clicking, holding, dragging and releasing at new elevation. Usually dragging out raises, and dragging in lowers, but it's really just releasing at the desired elevation. Keep the cursor within playable area for reliability. Right click to cancel.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","Water Tool will place water sources with left click, and remove water sources with right click.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","Water Tool will move existing water sources. Target elevations of existing water sources will not change. Right click to cancel.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","Water Tool will change radius of water sources. Right click to cancel.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.ElevationChange","Elevation Change","","","","","","","","","","","",""
-"YY_WATER_FEATURES.PlaceWaterSource","Place Water Source","","","","","","","","","","","",""
-"YY_WATER_FEATURES.MoveWaterSource","Move Water Source","","","","","","","","","","","",""
-"YY_WATER_FEATURES.RadiusChange","Change Radius","","","","","","","","","","","",""
+"Options.GROUP:Experimental","실험 기능","","","","","","","","","","","",""
+"Options.GROUP:Stable","일반","","","","","","","","","","","",""
+"Options.OPTION:Fluidness","유동성","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:Fluidness","물 시스템의 유동성 계수를 변경합니다. 이것이 무엇을 하는지 봅시다.","","","","","","","","","","","",""
+"Editor.TOOL[Yenyang's Water Tool]","Yenyang의 물 도구","","","","","","","","","","","",""
+"Options.OPTION:WaterToolSettingsAffectEditorSimulation","물 도구 설정은 에디터 시뮬레이션에 영향을 줍니다","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","물 도구탭의 설정이 증발, 유동성 및 물 청소 주기와 같은 에디터 시뮬레이션에 영향을 미칠 수 있습니다.","","","","","","","","","","","",""
+"Options.OPTION:SeasonalStreamsAffectEditorSimulation","계절 하천 설정이 에디터 시뮬레이션에 영향을 미침","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","계절 하천 탭의 설정이 에디터 시뮬레이션에 영향을 미치고 하천 유량을 변경할 수 있습니다.","","","","","","","","","","","",""
+"Options.OPTION:WavesAndTidesAffectEditorSimulation","파도와 조수 설정이 에디터 시뮬레이션에 영향을 미침","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","파도와 조수 탭의 설정이 해수면을 진동시키고 감쇠 값을 변경하여 에디터 시뮬레이션에 영향을 줄 수 있습니다.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","물 도구는 기존 수원 위로 마우스를 가져간 후 마우스 왼쪽 버튼을 누르고 드래그한 후 새 고도에서 놓아 기존 수원의 목표 높이를 변경합니다. 일반적으로 드래그하면 상승하고 드래그하면 낮아지지만 실제로는 원하는 높이에서 놓는 것뿐입니다. 신뢰성을 위해 커서를 재생 가능한 영역 내에 유지하십시오. 취소하려면 마우스 오른쪽 버튼을 클릭하세요.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","물 도구는 왼쪽 클릭으로 물원을 배치하고, 오른쪽 클릭으로 물원을 제거합니다.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","물 도구는 기존 수원을 이동합니다. 기존 수원의 목표 고도는 변경되지 않습니다. 취소하려면 마우스 오른쪽 버튼을 클릭하세요.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","물 도구는 수원의 반경을 변경합니다. 취소하려면 마우스 오른쪽 버튼을 클릭하세요.","","","","","","","","","","","",""
+"YY_WATER_FEATURES.ElevationChange","높이 변경","","","","","","","","","","","",""
+"YY_WATER_FEATURES.PlaceWaterSource","수원 배치","","","","","","","","","","","",""
+"YY_WATER_FEATURES.MoveWaterSource","수원 이동","","","","","","","","","","","",""
+"YY_WATER_FEATURES.RadiusChange","반경 변경","","","","","","","","","","","",""
