--- a/Water_Features/l10n/ru-RU.csv
+++ b/Water_Features/l10n/ru-RU.csv
@@ -5,9 +5,9 @@
 "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]","Сезонные потоки","","","","","","","","","","","",""
 "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]","Water Tool","","","","","","","","","","","",""
 "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]","Волны и приливы","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]","Добавление собирающих водохранилищ (требуется перезапуск)","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]","Добавить собирающие водохранилища (требуется перезапуск)","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]","Настраиваемый источник воды, уровень которого повышается с выпадением осадков и таянием снега и который медленно истощается в сухую погоду. Он имеет максимальную и минимальную высоту поверхности воды. Возможно, Вам потребуется настроить общую скорость испарения в настройках для обеспечения желаемого уровня инфильтрации воды в пруду.","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]","Добавление задерживающих водохранилищ (требуется перезапуск)","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]","Добавить удерживающие водохранилища (требуется перезапуск)","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]","Нестандартный источник воды, уровень которого повышается с выпадением осадков и таянием снега и который медленно истощается в сухую погоду. У него есть максимальная высота поверхности воды, но нет минимальной высоты поверхности воды. Возможно, вам потребуется отрегулировать общую скорость испарения в настройках для обеспечения желаемого уровня инфильтрации воды в пруду.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]","Использовать меньшие радиусы","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]","Позволяет вам попытаться создать источник воды с радиусом менее 5 м. Это не всегда будет работать, но будет увеличено до радиуса, который действительно работает.","","","","","","","","","","","",""
@@ -16,7 +16,7 @@
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableSeasonalStreams]","Включить сезонные потоки","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableSeasonalStreams]","Сезонные потоки используют Потоки (модифицированные источники воды с постоянным расходом) и привязывают их к климату и погоде на карте. Например, если на вашей карте засушливое лето, то количество этих источников воды будет уменьшаться в течение лета. Сезонные потоки сами по себе не должны вызывать наводнений, поскольку количество воды в источнике по умолчанию на карте считается максимальным, если вы не измените его. Все аспекты являются необязательными и настраиваются в настройках мода.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SimulateSnowMelt]","Имитация таяния снега","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SimulateSnowMelt]","Имитируйте накопление и таяние снега. В настоящее время таяние снега не привязано к визуальным эффектам снега. Это влияет на источники воды с постоянным скоростью потока, резервуары для сбора и удержания влаги.","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SimulateSnowMelt]","Имитирует накопление и таяние снега. В настоящее время таяние снега не привязано к визуальным эффектам снега. Это влияет на источники воды с постоянным скоростью потока, резервуары для сбора и удержания влаги.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ConstantFlowRate]","Постоянная скорость потока","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ConstantFlowRate]","Постоянная скорость потока воды из Потоков (модифицированных источников воды с постоянной скоростью потока) не зависит от времени года или погодных условий.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.StreamSeasonality]","Сезонность","","","","","","","","","","","",""
@@ -27,7 +27,7 @@
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.MinimumMultiplier]","Минимальный множитель, применяемый к скорости потока.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.MaximumMultiplier]","Максимальный множитель","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.MaximumMultiplier]","Максимальный множитель, применяемый к скорости потока.","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableWavesAndTides]","Включите волны и приливы","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableWavesAndTides]","Включить волны и приливы","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableWavesAndTides]","Эта функция зависит от дизайна карты. Лучше всего подходят карты с источником морской воды и одной береговой линией. Функция волн предназначена для того, чтобы заставить берег двигаться вперед и назад и создать песок вдоль береговой линии. Лучший способ обустроить пляжи - это просто покрасить их с помощью инструмента для поверхностей. Волны увеличивают площадь водной поверхности. Приливы случаются один или два раза в день. Волны и приливы всегда ниже первоначального уровня моря и не вызывают наводнений.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaveHeight]","Высота волны","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaveHeight]","Волны генерируются на границе карты, где находится источник морской воды. После создания они направляются к берегу. Карты не обязательно разрабатывались с учетом этих волн, и волны увеличивают поверхность воды. Волны ниже уровня моря, чем на исходной карте, и не вызывают наводнений. На таких картах, как Сан-Франциско, где море мелководное, волны и приливы должны быть меньшей высоты, чтобы большие участки неигровой территории не превратились в сухой песок.","","","","","","","","","","","",""
@@ -63,15 +63,15 @@
 "YY_WATER_FEATURES.OriginalFlow","Стандартный поток","","","","","","","","","","","",""
 "YY_WATER_FEATURES.MinDepth","Минимальная глубина","","","","","","","","","","","",""
 "YY_WATER_FEATURES.Radius","Радиус","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.amount-down-arrow","Reduces the flow for Streams. Decreases the depth or elevation for rivers, seas, and lakes. Reduces the max depth for retention and detention basins.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.amount-up-arrow","Increases the flow for Streams. Increases the depth or elevation for rivers, seas, and lakes. Increases the max depth for retention and detention basins.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.amount-down-arrow","Уменьшает скорость потока в ручьях. Уменьшает глубину или высоту в реках, морях и озерах. Уменьшает максимальную глубину для собирающих и удерживающих резервуаров.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.amount-up-arrow","Увеличивает скорость потока в ручьях. Увеличивает глубину или высоту в реках, морях и озерах. Увеличивает максимальную глубину для собирающих и удерживающих резервуаров.","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-down-arrow","Уменьшает радиус.","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-up-arrow","Увеличивает радиус.","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-down-arrow","Уменьшает минимальную глубину.","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-up-arrow","Увеличивает минимальную глубину.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.amount-rate-of-change","Changes the rate in which the increase and decrease buttons work for Flow, Depth and Elevation.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change","Changes the rate in which the increase and decrease buttons work for Radius.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change","Changes the rate in which the increase and decrease buttons work for minimum depth.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.amount-rate-of-change","Изменяет скорость, с которой кнопки увеличения и уменьшения влияют на Скорость потока, Глубину и Высоту.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change","Изменяет скорость, с которой кнопки увеличения и уменьшения влияют на радиус.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change","Изменяет скорость, с которой кнопки увеличения и уменьшения влияют на минимальную глубину.","","","","","","","","","","","",""
 "SubServices.NAME[WaterTool]","Water Tool","","","","","","","","","","","",""
 "Assets.SUB_SERVICE_DESCRIPTION[WaterTool]","Water Tool позволяет вам добавлять и удалять источники воды с вашей карты.","","","","","","","","","","","",""
 "Assets.NAME[WaterSource Stream]","Поток - Источник воды с постоянной или переменной скоростью","","","","","","","","","","","",""
@@ -95,7 +95,7 @@
 "Options.GROUP:Experimental","Экспериментальные функции","","","","","","","","","","","",""
 "Options.GROUP:Stable","Стабильные функции","","","","","","","","","","","",""
 "Options.OPTION:Fluidness","Текучесть","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION:Fluidness","Alter the Fluidness factor of the water system. It should change the flow characteristics.","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:Fluidness","Изменяет коэффициент текучести системы водоснабжения. Это должно изменить характеристики потока.","","","","","","","","","","","",""
 "Editor.TOOL[Yenyang's Water Tool]","Yenyang's Water Tool","","","","","","","","","","","",""
 "Options.OPTION:WaterToolSettingsAffectEditorSimulation","Настройки Water Tool влияют на симуляцию в редакторе","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Позволяет настройкам на вкладке Water Tool влиять на симуляцию в редакторе, включая испарение, текучесть и цикл очистки воды.","","","","","","","","","","","",""
