--- a/Water_Features/l10n/es-ES.csv
+++ b/Water_Features/l10n/es-ES.csv
@@ -93,21 +93,21 @@
 "Tooltip.LABEL[YY.WT.MustTouchBorder]","Las fuentes de agua del mar deben tocar la frontera del mapa.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.LockElevation]","Haga clic derecho para designar la elevación de la superficie del agua.","","","","","","","","","","","",""
 "Options.GROUP:Experimental","Experimental","","","","","","","","","","","",""
-"Options.GROUP:Stable","Stable","","","","","","","","","","","",""
-"Options.OPTION:Fluidness","Fluidness","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION:Fluidness","Alter the Fluidness factor of the water system. It should change the flow characteristics.","","","","","","","","","","","",""
+"Options.GROUP:Stable","Estable","","","","","","","","","","","",""
+"Options.OPTION:Fluidness","Fluidez","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:Fluidness","Altera el factor de fluidez del sistema de agua. Esto debe cambiar las características del caudal. Esto puede crear pequeñas olas, causar inundación o causar inestabilidades y picos en el sistema de agua.","","","","","","","","","","","",""
 "Editor.TOOL[Yenyang's Water Tool]","Yenyang's Water Tool","","","","","","","","","","","",""
-"Options.OPTION:WaterToolSettingsAffectEditorSimulation","Water Tool Settings Affect Editor Simulation","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Allows the settings in the Water Tool tab to affect the editor simulation such as evaporation, fluidness, and Water Clean Up Cycle.","","","","","","","","","","","",""
-"Options.OPTION:SeasonalStreamsAffectEditorSimulation","Seasonal Streams Settings Affect Editor Simulation","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","Allows the settings in the Seasonal Streams tab to affect the editor simulation and alter stream flowrates.","","","","","","","","","","","",""
-"Options.OPTION:WavesAndTidesAffectEditorSimulation","Waves and Tides Settings Affect Editor Simulation","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","Allows the settings in the Waves and Tides tab to affect the editor simulation by oscillating sea level and altering damping value.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","Water Tool will change target elevations of existing water sources by hovering over existing water source, left clicking, holding, dragging and releasing at new elevation. Usually dragging out raises, and dragging in lowers, but it's really just releasing at the desired elevation. Keep the cursor within playable area for reliability. Right click to cancel.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","Water Tool will place water sources with left click, and remove water sources with right click.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","Water Tool will move existing water sources. Target elevations of existing water sources will not change. Right click to cancel.","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","Water Tool will change radius of water sources. Right click to cancel.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.ElevationChange","Elevation Change","","","","","","","","","","","",""
-"YY_WATER_FEATURES.PlaceWaterSource","Place Water Source","","","","","","","","","","","",""
-"YY_WATER_FEATURES.MoveWaterSource","Move Water Source","","","","","","","","","","","",""
-"YY_WATER_FEATURES.RadiusChange","Change Radius","","","","","","","","","","","",""
+"Options.OPTION:WaterToolSettingsAffectEditorSimulation","Los ajustes de la herramienta de agua afectan la simulación en el editor","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Permite que los ajustes en la pestaña de herramienta de agua afecten la simulación en el editor como la evaporación, fluidez, y el ciclo de limpieza.","","","","","","","","","","","",""
+"Options.OPTION:SeasonalStreamsAffectEditorSimulation","Los ajustes de las corrientes estacionales afectan la simulación en el editor","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","Permite que los ajustes en la pestaña de corrientes estacionales afecten la simulación en el editor y altera el flujo de las corrientes.","","","","","","","","","","","",""
+"Options.OPTION:WavesAndTidesAffectEditorSimulation","Los ajustes de olas y marea afectan la simulación en el editor","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","Permite que los ajustes en la pestaña de olas y mareas afecten la simulación en el editor, cambiando el nivel del mar y alterando el valor de movimiento.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","La herramienta de agua cambiará las elevaciones de fuentes de agua actuales al hacer clic derecho, arrastrar y al soltar el botón en la elevación deseada.Generalmente, arrastrar el ratón hacia afuera, incrementa, y hacia adentro, lo disminuye, sin embargo, solo debes soltar el botón en la elevación deseada. Haz clic derecho para cancelar.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","La herramienta de agua colocará fuentes de agua al hacer clic izquierdo, y se eliminan con el clic derecho.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","La herramienta de agua moverá fuentes existentes de agua. La elevación no cambiará. Clic derecho para cancelar.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","La herramienta de agua cambiará el radio de fuentes de agua. Clic derecho para cancelar.","","","","","","","","","","","",""
+"YY_WATER_FEATURES.ElevationChange","Cambio de elevación","","","","","","","","","","","",""
+"YY_WATER_FEATURES.PlaceWaterSource","Colocar fuente de agua","","","","","","","","","","","",""
+"YY_WATER_FEATURES.MoveWaterSource","Mover fuente de agua","","","","","","","","","","","",""
+"YY_WATER_FEATURES.RadiusChange","Cambiar radio","","","","","","","","","","","",""
