change mod name back to english for chinese traditional

--- a/Water_Features/l10n/zh-HANT.csv
+++ b/Water_Features/l10n/zh-HANT.csv
@@ -1,4 +1,4 @@
-"Options.SECTION[Water_Features.Water_Features.WaterFeaturesMod]","水特徵","","","","","","","","","","","",""
+"Options.SECTION[Water_Features.Water_Features.WaterFeaturesMod]","Water Features","","","","","","","","","","","",""
 "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]","季節性溪流","","","","","","","","","","","",""
 "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]","水工具","","","","","","","","","","","",""
 "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]","波浪與潮汐","","","","","","","","","","","",""
